GROOVY-8162: Update Groovysh to JLine3 (remove warning on recent JDKs)