@@ -29,6 +29,8 @@ if "%DIRNAME%" == "" set DIRNAME=.\
 
 set CLASSNAME=org.apache.groovy.groovysh.Main
 
+if "%JAVA_VERSION%" gtr "17.0" set JAVA_OPTS=%JAVA_OPTS% --enable-native-access=ALL-UNNAMED
+
 "%DIRNAME%\startGroovy.bat" "%DIRNAME%" %CLASSNAME% %*
 
 @rem End local scope for the variables with windows NT shell
